sorted bootstrap cards, img slider neds fixing
removed the jumbotrons and added cards for projects for smaller screen sizes. Image slider amd blockquote not responsive

--- a/NB's Website/NBrisco Website/assets/css/main.css
+++ b/NB's Website/NBrisco Website/assets/css/main.css
@@ -29,19 +29,16 @@
 	margin-top:2em;
 }
 
+
 #blockquote{
 	font-size: 3em;
 	font-family: Nunito;
 	float: left;
-	width: 100%;
-}
-
-#header #active{
-	color: #e5474b;
+	width: 50%;
 }
 
 /*** Projects ***/
-#Greenfell, #Orphans, #Lesvos, #RefugeeCrisis, #Dialysis{
+#Greenfell, #RefugeeCrisis{
 	margin-bottom:0px;
 	text-align: justify;
 	font-size: 1.3rem;
@@ -49,18 +46,16 @@
 	font-family: Nunito;
 }
 
-#Greenfell, #Orphans, #Lesvos{
+#Greenfell{
 	background-color: #243c4b;
 	color: white;
 	
 }
 
-#RefugeeCrisis, #Dialysis{
+#RefugeeCrisis{
 	background: none;
 	background-color: transparent;
 	margin-top: 0px;
-	
-
 }
 
 #sliderJumbot .jumbotron{
@@ -78,8 +73,8 @@
 	width: 70%;
 }
 
+/*************** Horizontal Line Style (hr CSS) *********************/
 /* Gradient transparent - color - transparent */
-
 hr.style-two {
     border: 0;
     height: 1px;
@@ -123,31 +118,44 @@ footer a #SiteName{
 	#sliderJumbot .jumbotron{
 	width: 100%;
 
-}
+	}
 }
 	@media screen and (max-width: 980px) {
 		
 
 	}
 		@media screen and (max-width: 736px){
-			#Greenfell .image.left, #Orphans .image.left, #Lesvos .image.left, #RefugeeCrisis .image.right, #Dialysis .image.right{
+			#Greenfell .image.left, #RefugeeCrisis .image.right{
 				display: none;
 			}
 
 		}
-			@media screen and (max-width: 475px){
 
-				#Greenfell, #Orphans, #Lesvos, #RefugeeCrisis, #Dialysis{
-					font-size: 1em;
+			@media screen and (max-width: 577px){
+				#Greenfell, #RefugeeCrisis{
+					display: none;
 				}
 
 			}
 
-				@media screen and (max-width: 395px){
-					#blockquote{
-						font-size: 1.5em;
-					}
+			@media screen and (min-width: 577px){
+				#hidden1, #hidden2{
+					display: none
 				}
+			}
+				@media screen and (max-width: 475px){
+
+					#Greenfell, #Orphans, #Lesvos, #RefugeeCrisis, #Dialysis{
+						font-size: 1em;
+					}
+
+				}
+
+					@media screen and (max-width: 395px){
+						#blockquote{
+							font-size: 1.5em;
+						}
+					}
 
 
 
